# auth

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  README_CN.md
config/: .gitignore  services-example.toml
config/jwt/: access_private_key.pem  access_public_key.pem  refresh_private_key.pem  refresh_public_key.pem
crates/error-code/src/: auth.rs
crates/migration/src/: lib.rs  m20260316_082539_create_users_table.rs  m20260316_084945_create_mfa_table.rs
crates/repo/: Cargo.toml
crates/repo/src/: lib.rs
crates/repo/src/entity/: mfa.rs  mod.rs  prelude.rs  users.rs
crates/repo/src/table/: mod.rs
crates/repo/src/table/users/: dto.rs  service.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs
crates/service/src/api/: auth.rs
crates/service/src/dto/: auth.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: main.rs  settings.rs
crates/web-server/src/dto/: auth.rs  internal.rs  mod.rs
crates/web-server/src/error/: mod.rs
crates/web-server/src/handlers/: auth.rs  internal.rs  mod.rs  user.rs
crates/web-server/src/routes/: auth.rs  internal.rs  mod.rs  session.rs  user.rs
crates/web-server/src/statics/: internal_auth.rs  mod.rs
scripts/: README.md  build_linux_bundle.sh  gen_jwt_keys.sh  init_db.sh  upgrade_uuid_columns.sh
